src/objects/agf__ADM_Additional_Field__c.object
<CustomObject>
    <fields>
        <fullName>agf__Bug_Setting__c</fullName>
        <label>Bug Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Investigation_Setting__c</fullName>
        <label>Investigation Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Product_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Tag</label>
        <referenceTo>agf__ADM_Product_Tag__c</referenceTo>
        <relationshipLabel>Additional Fields</relationshipLabel>
        <relationshipName>Additional_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Story_Setting__c</fullName>
        <label>User Story Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Additional Field</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Additional Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>